--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,390 @@
-#root {
-  max-width: 1280px;
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+/* Default CSS Styling */
+*{
+  font-family: 'Playfair Display';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
+
+body{
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: rgb(138, 128, 114) !important;
+  color: blanchedalmond !important;
+  font-family: 'Playfair Display' !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
+/* About Me */
+.about{
+  margin-top: 0;
+  padding: 260px 0 100px 0;
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+/* find smaller image */
+.about img{
+  height: auto;
+  width: 40%;
+  border-radius: 20%;
+}
+
+.about .tagline{
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  background: linear-gradient(90.21 deg, rgba(170, 54, 124, 0.5)-5.91%, rgba(74, 47, 189, 0.5) 1%);
+  border: 1px solid #bc9e51;
+  font-size: 20px;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+.about h1{
+  font-size: 65px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.about p{
+  color: rgb(190, 188, 188);
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+}
+
+/* .banner img{
+  animation: updown 3s linear infinite;
+} */
+
+.wrap {
+  border-right: 00.08em solid rgb(209, 185, 139);
+}
+
+/* Project */
+.project{
+  padding: 80px 0;
+  position: relative;
+  background-color: rgb(159, 149, 135);
+}
+.project h2{
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+}
+.project p{
+  color:#B8B8B8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+.project .nav.nav-pills{
+  width: 72%;
   margin: 0 auto;
-  padding: 2rem;
+  border-radius: 50px;
+  background-color: rgb(138, 128, 114);
+  overflow: hidden;
+}
+.project .nav.nav-pills .nav-item{
+  width: 33.333%;
+}
+.project .nav.nav-pills .nav-link{
+  background-color: transparent;
+  border-radius: 0;
+  padding: 17px 0;
+  color: #fff;
+  width: 100%;
+  font-size: 17px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+  z-index: 0;
+}
+.project .nav.nav-pills .nav-link::before{
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 100%;
+  background: linear-gradient(90.21deg, #36aa7a -5.91%, #117a2d 111.58%);
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
+}
+.project .nav.nav-pills .nav-link.active::before{
+  width: 100% !important;
+}
+.project .nav.nav-pills .nav-link.active{
+  border: 1px solid rgb(229, 11, 11)
+}
+
+.proj-img{
+  width: 100%;
+  height: auto;
+}
+.proj-imgbx{
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+.proj-imgbx::before{
+  content: "";
+  background: linear-gradient(90.21deg, #bc9e51 -5.91%, #bebc42 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.proj-imgbx:hover::before{
+  height: 100%;
+}
+.proj-txtx{
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+.proj-imgbx:hover .proj-txtx{
+  top: 50%;
+  opacity: 1;
+}
+.proj-txtx h4{
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+.proj-txtx span{
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.8px;
+}
+
+/* Navbar */
+nav.navbar{
+  padding: 15px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+  transition: 0.30 ease-in-out;
+}
+
+.scrolled {
+  padding: 0px 0;
+  background-color: #e2c58b;
+}
+
+.navbar-nav .nav-link {
+  font-weight: 400;
+  color: #fff ;
+  letter-spacing: 0.8px;
+  padding: 0.25px;
+  font-size: 18px;
+  opacity: 0.75;
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link.active{
+  opacity: 1;
+}
+
+span.navbar-text{
+  display: flex;
+  align-items: center;
+}
+
+.social-icon{
+  display: inline-block;
+  margin-left: 14px;
+}
+
+.social-icon a{
+  width: 50px;
+  height: 50px;
+  background: white;
+  display: inline-flex;
+  border-radius: 50%;
+  margin-right: 6px;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid black;
+}
+
+.social-icon img{
+  height: 50px;
+  width: 50px;
+}
+
+.social-icon a::before{
+  content: '';
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50px;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
+}
+
+.social-icon a:hover::before {
+  transform: scale(1);
+}
+
+.social-icon a:hover img{
+  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(90%) hue-rotate(346deg) brightness(90%);
+}
+
+.navbar-text button{
+  font-weight: 700;
+  color:rgb(72, 52, 45) ;
+  border: 1px solid rgb(72, 52, 45);
+  padding: 12px 30px;
+  font-size: 18px;
+  margin-left: 18px;
+  position: relative;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
+}
+
+.navbar-toggler:active,
+.navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.navbar-toggler{
+  outline: none;
+  box-shadow: none;
+}
+
+
+.navbar-toggler-icon{
+  width: 24px;
+  height: 17px;
+  background-image: none;
+  position: relative;
+  border-bottom: 2px solid #fff;
+  transition: all 300ms linear;
+  top: -2px;
+}
+
+.navbar-toggler-icons:focus,
+.navbar-toggler-icon:active {
+  border-bottom: 2px solid #fff;
+}
+
+.navbar-toggler-icon:after,
+.navbar-toggler-icon:before {
+  width: 24px;
+  position: absolute;
+  height: 2px;
+  background-color: #fff;
+  top: 0%;
+  left: 0%;
+  content: '';
+  z-index: 2;
+  transition: all 300ms linear;
+}
+
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after{
+  transform: rotate(45deg);
+  background-color: #fff;
+  height: 2px;
+}
+
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
+  transform: translateY(8px) rotate(-45deg);
+  background-color: #fff;
+  height: 2px;
+}
+
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon{
+  border-color: transparent;
+}
+
+/* Footer */
+.footer{
+  padding: 0 0 50px 0;
+}
+.footer .social-icon{
+  position: absolute;
+}
+.footer p{
+  font-weight: 400;
+  font-size: 15px;
+  color: #e8dcdc;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
+  position: relative;
+}
+
+.App {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-@keyframes logo-spin {
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: rgb(138, 128, 114);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
