--- a/src/App.css
+++ b/src/App.css
@@ -5,46 +5,60 @@
   font-family: 'Playfair Display';
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
-}
+  box-sizing: border-box;
+} 
 
-html{
-  scroll-behavior: smooth;
-  scroll-padding-top: 75px;
+html, body{
+  height: 100%;
+  width: 100%;
 }
 
 body{
-  font-weight: 400;
-  /* overflow-x: hidden; */
-  /* position: relative; */
-  background-color: rgb(138, 128, 114) !important;
-  color: blanchedalmond !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  /* background-color: rgb(138, 128, 114) !important; */
+  color: blanchedalmond;
   font-family: 'Playfair Display' !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  line-height: normal;
-}
-
-/* Navigation */
-.navLink {
+#root{
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+/* .header{
+  background-color: aqua;
+} */
+
+/* TRY ADDING A SECTION CLASS TO STYLE EACH SECTION THAT GETS RENDERED */
+
+
+/* Navigation */
+.custom-navbar{
+  background-color: rgb(132, 166, 196);
+}
+
+.navLink {
+  /* display: flex; */
+  /* align-items: center; */
   list-style-type: none;
   margin: 0;
   padding: 0;
   letter-spacing: 0.8px;
 }
-
+/* '>' targets the  children of .navLink */
 .navLink > .nav-item {
   margin-right: 10px;
 }
 
 .navLink > .nav-item > .nav-link {
-  color: #333;
-  font-size: 16px;
+  color: #333232;
+  font-size: 25px;
   text-decoration: none;
   padding: 10px 15px;
   transition: color 0.3s ease;
@@ -55,9 +69,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navLink > .nav-item > .nav-link.active-link {
-  font-size: larger;
+  font-size: 50px;
   font-weight: bold;
-  color: #cadecc; 
 }
 
 
@@ -78,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  width: 96%;
+  /* width: 96%; */
 }
 
 
@@ -87,23 +100,13 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 0 50px 0;
 }
 
-.social-icon{
-  display:flex;
-  justify-content: center;
-  /* display: inline-block; */
-  margin-left: 14px;
-}
-
 .social-icon a{
   display: inline-block;
   width: 50px;
   height: 50px;
   background: white;
-  /* display: inline-flex; */
   border-radius: 50%;
   margin-right: 6px;
-  /* align-items: center; */
-  /* justify-content: center; */
   line-height: 1;
   border: 1px solid black;
 }
@@ -132,42 +135,22 @@ h1, h2, h3, h4, h5, h6 {
   filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(90%) hue-rotate(346deg) brightness(90%);
 }
 
-
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+/*  PART THAT SAYS MY NAME */
 .App-header {
-  background-color: rgb(138, 128, 114);
+  background-color: rgb(146, 104, 40);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(160, 49, 49);
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
