Added Contact form and logic for validating email.

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@ body{
   width: 100%;
 }
 
+#main-section{
+  background-color: rgb(193, 224, 244);
+}
 /* .header{
   background-color: aqua;
 } */
@@ -139,7 +142,6 @@ body{
   text-align: center;
 }
 
-/*  PART THAT SAYS MY NAME */
 .App-header {
   background-color: rgb(146, 104, 40);
   min-height: 100vh;
