--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
-/* Default CSS Styling */
-*{
-  font-family: 'Playfair Display';
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} 
-
 html, body{
   height: 100%;
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
-body{
+header, footer {
+  height: fit-content;
+  background-color: #333;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  /* background-color: rgb(138, 128, 114) !important; */
-  color: blanchedalmond;
-  font-family: 'Playfair Display' !important;
 }
 
-#root{
+#main-section {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  width: 100%;
+  min-height: calc(100vh - 120px);
+  overflow-y: auto; 
 }
 
-#main-section{
-  background-color: rgb(193, 224, 244);
+.section {
+  flex: 1; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+  padding: 20px; 
+  box-sizing: border-box;
+  background-color: aliceblue;
 }
-/* .header{
-  background-color: aqua;
+
+/* #root{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 } */
 
 /* TRY ADDING A SECTION CLASS TO STYLE EACH SECTION THAT GETS RENDERED */
-
+.proj-img{
+  width: 100%;
+  height: auto;
+}
+.proj-imgbx{
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+.proj-imgbx::before{
+  content: "";
+  background: linear-gradient(90.21deg, #bc9e51 -5.91%, #bebc42 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.proj-imgbx:hover::before{
+  height: 100%;
+}
+.proj-txtx{
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+.proj-imgbx:hover .proj-txtx{
+  top: 50%;
+  opacity: 1;
+}
+.proj-txtx h4{
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+.proj-txtx span{
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.8px;
+}
 
 /* Navigation */
 .custom-navbar{
@@ -47,8 +98,6 @@ body{
 }
 
 .navLink {
-  /* display: flex; */
-  /* align-items: center; */
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -76,7 +125,6 @@ body{
   font-weight: bold;
 }
 
-
 /* About Me */
 .about{
   margin-top: 0;
@@ -94,14 +142,9 @@ body{
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  /* width: 96%; */
 }
-
 
 /* Footer */
-.footer{
-  padding: 0 0 50px 0;
-}
 
 .social-icon a{
   display: inline-block;
@@ -136,23 +179,4 @@ body{
 
 .social-icon a:hover img{
   filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(90%) hue-rotate(346deg) brightness(90%);
-}
-
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: rgb(146, 104, 40);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(160, 49, 49);
-}
-
-.App-link {
-  color: #61dafb;
 }
