--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,25 @@ html, body{
 
 .headerContent{
   height: fit-content;
-  background-color: #333;
-  color: white;
+  background-color: #584a4a;
+  color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
 }
+
 .logo{
   padding: 10px;
   margin-right: auto;
-  color: rgb(196, 243, 243);
+  color:#d9e9d5;
+}
+
+h1, h2, h3, .custom-navbar{
+  font-family: 'Playfair Display';
 }
 
 footer{
   height: 10vh;
-  background-color: #333;
+  background-color: #584a4a;
   color: white;
   display: flex;
   justify-content: center;
@@ -34,8 +39,26 @@ footer{
   flex-direction: column;
   min-height: calc(100vh - 120px);
   overflow-y: auto; 
-  padding: 20px;
-  background-color: aliceblue;
+  padding: 30px;
+  background-color: #af968c ;
+}
+
+#main-section h1{
+  color: #3e3e2f;
+}
+
+#main-section p{
+  color: #383829;
+  font-size: 1.1rem;
+}
+
+/* About Me */
+.profilePic{
+  height: auto;
+  width: 15%;
+  border-radius: 20%;
+  float: left;
+  margin-right: 5px;
 }
 
 .proj-img{
@@ -49,18 +72,21 @@ footer{
   overflow: hidden;
   margin-bottom: 24px;
 }
+
 .proj-imgbx::before{
   content: "";
-  background: linear-gradient(90.21deg, #bc9e51 -5.91%, #bebc42 111.58%);
+  background: linear-gradient(90.21deg, #D7CCC8 -5.91%, #c5e2bd 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
   height: 0;
   transition: 0.4s ease-in-out;
 }
+
 .proj-imgbx:hover::before{
   height: 100%;
 }
+
 .proj-txtx{
   position: absolute;
   text-align: center;
@@ -71,6 +97,7 @@ footer{
   opacity: 0;
   width: 100%;
 }
+
 .proj-imgbx:hover .proj-txtx{
   top: 50%;
   opacity: 1;
@@ -94,12 +121,16 @@ footer{
 
 #projectLinks a{
   text-decoration: none;
-  color: rgb(197, 241, 241);
+  color: #383829;
+}
+
+#projectLinks a:hover{
+  color: antiquewhite;
 }
 
 /* Navigation */
 .custom-navbar{
-  background-color: rgb(132, 166, 196);
+  background-color: #b3a49f;
 }
 
 .navLink {
@@ -114,7 +145,7 @@ footer{
 }
 
 .navLink > .nav-item > .nav-link {
-  color: #333232;
+  color: #656464;
   font-size: 25px;
   text-decoration: none;
   padding: 10px 15px;
@@ -122,26 +153,12 @@ footer{
 }
 
 .navLink > .nav-item > .nav-link:hover {
-  color: #cadecc; 
+  color: #c5e2bd; 
 }
 
 .navLink > .nav-item > .nav-link.active-link {
   font-size: 50px;
-  font-weight: bold;
-}
-
-/* About Me */
-.profilePic{
-  height: auto;
-  width: 15%;
-  border-radius: 20%;
-}
-
-.about p{
-  color: rgb(190, 188, 188);
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
+  font-weight: bolder;
 }
 
 /* Footer */
@@ -162,7 +179,7 @@ footer{
 }
 
 .social-icon a:hover{
-  background-color: #cadecc;
+  background-color: #c5e2bd;
   transition: 0.3s ease-out;
 }
 
