--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 html, body{
   height: 100%;
@@ -9,8 +11,7 @@ html, body{
 
 .headerContent{
   height: fit-content;
-  background-color: #584a4a;
-  color: rgb(255, 255, 255);
+  background-color: #8D9B6A;
   display: flex;
   align-items: center;
 }
@@ -18,20 +19,52 @@ html, body{
 .logo{
   padding: 10px;
   margin-right: auto;
-  color:#d9e9d5;
+  color: rgb(225, 222, 220);
 }
 
 h1, h2, h3, .custom-navbar{
   font-family: 'Playfair Display';
 }
 
-footer{
-  height: 10vh;
-  background-color: #584a4a;
+h1{
+  text-decoration:antiquewhite underline dotted;
+  text-align: center;
+}
+
+h3{
+  text-decoration: underline;
+}
+
+/* Navigation */
+.custom-navbar{
+  background-color: rgb(218, 209, 197);
+}
+
+.navLink {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  letter-spacing: 0.8px;
+}
+
+/* '>' targets the  children of .navLink */
+.navLink > .nav-item {
+  margin-right: 10px;
+}
+
+.navLink > .nav-item > .nav-link {
+  font-size: 25px;
+  text-decoration: none;
+  padding: 10px 15px;
+  transition: color 1s ease;
+}
+
+.navLink > .nav-item > .nav-link:hover {
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+.navLink > .nav-item > .nav-link.active-link {
+  font-weight: bolder;
 }
 
 #main-section {
@@ -40,15 +73,16 @@ footer{
   min-height: calc(100vh - 120px);
   overflow-y: auto; 
   padding: 30px;
-  background-color: #af968c ;
+  background-color: rgb(218, 209, 197);
+
 }
 
 #main-section h1{
-  color: #3e3e2f;
+  color: #6b4629;
 }
 
 #main-section p{
-  color: #383829;
+  color: #5c3b29;
   font-size: 1.1rem;
 }
 
@@ -58,24 +92,25 @@ footer{
   width: 15%;
   border-radius: 20%;
   float: left;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
+/* Portfolio */
 .proj-img{
   width: 100%;
   height: auto;
 }
 
-.proj-imgbx{
+.proj-imgbox{
   position: relative;
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
 }
 
-.proj-imgbx::before{
+.proj-imgbox::before{
   content: "";
-  background: linear-gradient(90.21deg, #D7CCC8 -5.91%, #c5e2bd 111.58%);
+  background: linear-gradient(90.21deg, #8D9B6A -5.91%, #92a9b4 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
@@ -83,11 +118,11 @@ footer{
   transition: 0.4s ease-in-out;
 }
 
-.proj-imgbx:hover::before{
+.proj-imgbox:hover::before{
   height: 100%;
 }
 
-.proj-txtx{
+.proj-txt{
   position: absolute;
   text-align: center;
   top: 65%;
@@ -98,17 +133,21 @@ footer{
   width: 100%;
 }
 
-.proj-imgbx:hover .proj-txtx{
+.proj-imgbox:hover .proj-txt{
   top: 50%;
   opacity: 1;
 }
-.proj-txtx h4{
+
+.proj-txt h4{
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
+  font-family: 'Cormorant Garamond';
+  color: whitesmoke;
 }
-.proj-txtx span{
+
+.proj-txt span{
   font-style: italic;
   font-weight: 400;
   font-size: 15px;
@@ -120,48 +159,34 @@ footer{
 }
 
 #projectLinks a{
-  text-decoration: none;
-  color: #383829;
+  text-decoration: underline;
+  color: #c8d9e0;
 }
 
 #projectLinks a:hover{
-  color: antiquewhite;
+  color: rgb(194, 241, 175);
 }
 
-/* Navigation */
-.custom-navbar{
-  background-color: #b3a49f;
+/* Resume */
+p, #resumeContent{
+  font-family: 'Lora';
+  color: #5c3b29;
 }
 
-.navLink {
+.resumeContact{
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0.8px;
-}
-/* '>' targets the  children of .navLink */
-.navLink > .nav-item {
-  margin-right: 10px;
-}
-
-.navLink > .nav-item > .nav-link {
-  color: #656464;
-  font-size: 25px;
-  text-decoration: none;
-  padding: 10px 15px;
-  transition: color 0.3s ease;
-}
-
-.navLink > .nav-item > .nav-link:hover {
-  color: #c5e2bd; 
-}
-
-.navLink > .nav-item > .nav-link.active-link {
-  font-size: 50px;
-  font-weight: bolder;
 }
 
 /* Footer */
+footer{
+  height: 10vh;
+  background-color: #8A9EA7;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .social-icon img{
   height: 50px;
   width: 50px;
@@ -175,14 +200,10 @@ footer{
   margin-right: 6px;
   line-height: 1;
   border: 1px solid black;
-  background-color: whitesmoke;
+  background-color: rgb(255, 255, 255);
 }
 
 .social-icon a:hover{
-  background-color: #c5e2bd;
-  transition: 0.3s ease-out;
-}
-
-.social-icon a:hover img{
-  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(90%) hue-rotate(346deg) brightness(90%);
+  background-color: rgb(166, 211, 234);
+  transition: 0.7s ease-in;
 }
